--- a/src/View/EditDialogClient.fxml
+++ b/src/View/EditDialogClient.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="500.0" styleClass="background" stylesheets="@../../bin/View/ThemeToutBois.css" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.EditDialogController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="500.0" styleClass="background" stylesheets="@../../bin/View/ThemeToutBois.css" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.EditDialogClientContoller">
    <children>
       <Label layoutX="14.0" layoutY="6.0" text="Mise à jour" AnchorPane.leftAnchor="55.0" AnchorPane.topAnchor="5.0">
          <font>
