--- a/src/View/RepresentantEditDialog.fxml
+++ b/src/View/RepresentantEditDialog.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="378.0" prefWidth="500.0" styleClass="background" stylesheets="@../../../Eclipse%20Projet/ToutBois/bin/View/ThemeBlack.css" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.RepresentantEditDialogueController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="378.0" prefWidth="500.0" styleClass="background" stylesheets="@../../bin/View/ThemeToutBois.css" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.RepresentantEditDialogueController">
    <children>
       <Label layoutX="14.0" layoutY="6.0" text="Mise à jour" AnchorPane.leftAnchor="55.0" AnchorPane.topAnchor="5.0">
          <font>
@@ -56,10 +56,10 @@
          </children>
       </GridPane>
       <Button layoutX="329.0" layoutY="345.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="33.0" prefWidth="134.0" text="Annuler" AnchorPane.bottomAnchor="10.0" />
-      <Button layoutX="183.0" layoutY="345.0" mnemonicParsing="false" onAction="#handleOk" prefHeight="33.0" prefWidth="134.0" text="Ok" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="183.0" />
+      <Button layoutX="183.0" layoutY="345.0" mnemonicParsing="false" onAction="#handleOkVrp" prefHeight="33.0" prefWidth="134.0" text="Ok" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="183.0" />
       <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="-66.0" layoutY="-49.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
          <image>
-            <Image url="@Image/Paramtre.gif" />
+            <Image url="@../../bin/View/Image/Paramtre.gif" />
          </image>
       </ImageView>
    </children>
