--- a/src/View/BaseLogiciel.fxml
+++ b/src/View/BaseLogiciel.fxml
@@ -30,12 +30,18 @@
    <top>
       <MenuBar prefHeight="25.0" prefWidth="1000.0" BorderPane.alignment="CENTER">
         <menus>
+            <Menu mnemonicParsing="false" text="Fichier">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Sauvegarder" />
+                  <MenuItem mnemonicParsing="false" text="Sauvegarder Sous..." />
+                  <MenuItem mnemonicParsing="false" text="Quitter" />
+              </items>
+            </Menu>
             <Menu mnemonicParsing="false" text="Nouveau">
               <items>
                 <MenuItem mnemonicParsing="false" text="Client" />
                   <MenuItem mnemonicParsing="false" text="Prospect" />
                   <MenuItem mnemonicParsing="false" text="Representant" />
-              <MenuItem mnemonicParsing="false" text="Fermer" />
               </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Ouvrir">
