--- a/src/View/ProspectFrame.fxml
+++ b/src/View/ProspectFrame.fxml
@@ -97,6 +97,7 @@
                </font>
             </Label>
             <Label fx:id="nbCommande" layoutX="420.0" layoutY="155.0" text="Label" AnchorPane.topAnchor="155.0" />
+            <Button alignment="TOP_CENTER" layoutX="314.0" layoutY="198.0" mnemonicParsing="false" onAction="#handleProspectToClient" prefHeight="33.0" prefWidth="134.0" text="Client" textAlignment="CENTER" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="20.0" layoutY="540.0" prefHeight="200.0" prefWidth="200.0" styleClass="background1" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="540.0">
